infra/setup/app/chaos-cron.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sre-challenge-chaos
  labels:
    purpose: chaos-testing
