infra/setup/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: sre-challenge
  labels:
    app: node-app
spec:
  selector:
    app: node-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
